main, moved main layout to components folder

--- a/frontend/src/styles/_imports.scss
+++ b/frontend/src/styles/_imports.scss
@@ -1,5 +1,3 @@
 // components
 @import "./components/shared/PageTop.scss";
-
-// layouts
-@import "./layouts/Main.scss";
+@import "./components/shared/MainLayout.scss";
