--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -7,3 +7,39 @@
 body {
   font-family: "Source Sans Pro", sans-serif;
 }
+
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+.mb-15 {
+  margin-bottom: 15px;
+}
+
+.default-input {
+  padding: 10px 15px;
+  border-radius: 4px;
+  font-size: 13px;
+  border: 1px solid $primaryColor;
+  background-color: rgb(248, 248, 248);
+}
+
+.default-btn {
+  padding: 10px 15px;
+  border-radius: 7px;
+  font-size: 17px;
+  font-weight: 600;
+}
+
+.primary-btn {
+  @extend .default-btn;
+
+  border: 1px solid $primaryColor;
+  background-color: $primaryColor;
+  color: $secondaryColor;
+
+  &:hover {
+    background-color: #fff;
+    color: $primaryColor;
+  }
+}
