--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -4,3 +4,11 @@ $primaryColor: #222222;
 $secondaryColor: #ff9907;
 
 $defaultTransition: 0.1s ease-in-out;
+
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+.mb-15 {
+  margin-bottom: 15px;
+}
