main, moved header to separate file, added loader state for me query

--- a/frontend/src/styles/_imports.scss
+++ b/frontend/src/styles/_imports.scss
@@ -2,5 +2,7 @@
 @import "./components/shared/PageTop.scss";
 @import "./components/shared/AuthContent.scss";
 @import "./components/shared/InputField.scss";
+@import "./components/shared/Loader.scss";
+@import "./components/shared/Header.scss";
 
 @import "./components/layouts/MainLayout.scss";
