main, added create-post page

--- a/frontend/src/styles/_imports.scss
+++ b/frontend/src/styles/_imports.scss
@@ -5,4 +5,6 @@
 @import "./components/shared/Loader.scss";
 @import "./components/shared/Header.scss";
 
+@import "./components/create-post/Content.scss";
+
 @import "./components/layouts/MainLayout.scss";
