main, inited latest posts api, added cards components for posts, added sidebar with categories

--- a/frontend/src/styles/_imports.scss
+++ b/frontend/src/styles/_imports.scss
@@ -4,6 +4,7 @@
 @import "./components/shared/InputField.scss";
 @import "./components/shared/Loader.scss";
 @import "./components/shared/Header.scss";
+@import "./components/shared/CardsContent.scss";
 
 @import "./components/create-post/Content.scss";
 
