main, added news page, inited layout for news page cards with pagination

--- a/frontend/src/styles/_imports.scss
+++ b/frontend/src/styles/_imports.scss
@@ -8,4 +8,6 @@
 
 @import "./components/create-post/Content.scss";
 
+@import "./components/news/Cards.scss";
+
 @import "./components/layouts/MainLayout.scss";
