--- a/frontend/src/styles/components/shared/CardsContent.scss
+++ b/frontend/src/styles/components/shared/CardsContent.scss
@@ -2,6 +2,11 @@
   margin: 50px 0px;
   display: flex;
   justify-content: space-between;
+
+  &__cards {
+    flex: 1;
+    margin-right: 40px;
+  }
 }
 
 .cards-content-sidebar {
@@ -48,16 +53,13 @@
   }
 }
 
-.cards-content-cards {
-  flex: 1;
-  margin-right: 40px;
-}
-
 .post-card {
   border: 1px solid rgba(1, 3, 15, 0.2);
   border-radius: 7px;
   padding: 15px;
   margin-bottom: 25px;
+  width: 100%;
+
   &:last-child {
     margin-bottom: 0;
   }
