--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -36,7 +36,7 @@ body {
   background-color: $primaryColor;
   color: $secondaryColor;
 
-  &:hover:not(:disabled) {
+  &:hover:not([disabled]) {
     background-color: #fff;
     color: $primaryColor;
   }
