main, inited post page

--- a/frontend/src/styles/_imports.scss
+++ b/frontend/src/styles/_imports.scss
@@ -8,6 +8,9 @@
 
 @import "./components/create-post/Content.scss";
 
+@import "./components/post/Content.scss";
+@import "./components/post/Form.scss";
+
 @import "./components/news/Cards.scss";
 
 @import "./components/layouts/MainLayout.scss";
