main, added post comments, get post by id query and create post mutation

--- a/frontend/src/styles/_imports.scss
+++ b/frontend/src/styles/_imports.scss
@@ -10,6 +10,7 @@
 
 @import "./components/post/Content.scss";
 @import "./components/post/Form.scss";
+@import "./components/post/Comments.scss";
 
 @import "./components/news/Cards.scss";
 
